disallow-untyped-defs for the module_api (#11029)

--- a/mypy.ini
+++ b/mypy.ini
@@ -165,6 +165,9 @@ disallow_untyped_defs = True
 [mypy-synapse.metrics.*]
 disallow_untyped_defs = True
 
+[mypy-synapse.module_api.*]
+disallow_untyped_defs = True
+
 [mypy-synapse.push.*]
 disallow_untyped_defs = True
 
