Why is mock installed?!

--- a/tox.ini
+++ b/tox.ini
@@ -74,6 +74,8 @@ setenv =
 passenv = *
 
 commands =
+    pip show mock
+
     # the "env" invocation enables coverage checking for sub-processes. This is
     # particularly important when running trial with `-j`, since that will make
     # it run tests in a subprocess, whose coverage would otherwise not be
