Add most of the missing type hints to `synapse.federation`. (#11483)
This skips a few methods which are difficult to type.

--- a/mypy.ini
+++ b/mypy.ini
@@ -158,6 +158,12 @@ disallow_untyped_defs = True
 [mypy-synapse.events.*]
 disallow_untyped_defs = True
 
+[mypy-synapse.federation.*]
+disallow_untyped_defs = True
+
+[mypy-synapse.federation.transport.client]
+disallow_untyped_defs = False
+
 [mypy-synapse.handlers.*]
 disallow_untyped_defs = True
 
