Add notes about lack of retrospective action to the new lifetime options

--- a/docs/sample_config.yaml
+++ b/docs/sample_config.yaml
@@ -1215,6 +1215,9 @@ oembed:
 # Note that this only applies to clients which advertise support for
 # refresh tokens.
 #
+# Note also that this is calculated at login time and refresh time:
+# changes are not applied to existing sessions until they are refreshed.
+#
 # By default, this is 5 minutes.
 #
 #refreshable_access_token_lifetime: 5m
@@ -1223,6 +1226,9 @@ oembed:
 # exchanged for another one first).
 # This option can be used to automatically log-out inactive sessions.
 # Please see the manual for more information.
+#
+# Note also that this is calculated at login time and refresh time:
+# changes are not applied to existing sessions until they are refreshed.
 #
 # By default, this is infinite.
 #
@@ -1233,6 +1239,9 @@ oembed:
 # Please note that not all clients support refresh tokens, so setting
 # this to a short value may be inconvenient for some users who will
 # then be logged out frequently.
+#
+# Note also that this is calculated at login time: changes are not applied
+# retrospectively to existing sessions for users that have already logged in.
 #
 # By default, this is infinite.
 #
