--- a/mypy.ini
+++ b/mypy.ini
@@ -29,7 +29,6 @@ exclude = (?x)
    |synapse/storage/databases/main/cache.py
    |synapse/storage/databases/main/devices.py
    |synapse/storage/databases/main/e2e_room_keys.py
-   |synapse/storage/databases/main/end_to_end_keys.py
    |synapse/storage/databases/main/event_federation.py
    |synapse/storage/databases/main/event_push_actions.py
    |synapse/storage/databases/main/events_bg_updates.py
@@ -185,6 +184,9 @@ disallow_untyped_defs = True
 disallow_untyped_defs = True
 
 [mypy-synapse.storage.databases.main.directory]
+disallow_untyped_defs = True
+
+[mypy-synapse.storage.databases.main.end_to_end_keys]
 disallow_untyped_defs = True
 
 [mypy-synapse.storage.databases.main.events_worker]
