--- a/docs/sample_config.yaml
+++ b/docs/sample_config.yaml
@@ -1186,7 +1186,7 @@ oembed:
 # connect to arbitrary endpoints without having first signed up for a
 # valid account (e.g. by passing a CAPTCHA).
 #
-#turn_allow_guests: true
+#turn_guests: true
 
 
 ## Registration ##
@@ -1633,9 +1633,8 @@ saml2_config:
     #
     # By default, the user has to go to our login page first. If you'd like
     # to allow IdP-initiated login, set 'allow_unsolicited: "true"' 
-    # pysaml2 implements the booleans wrong here, the quotes are NEEDED
     #
-    #    allow_unsolicited: "true"
+    #    allow_unsolicited: true
     #
     #     The section below is used to configure what will be visible on the IdP's page.
     #     Note: shiboleth needs the logo to be defined for every language you use or it won't show up.
