Add missing type hints to `synapse.appservice` (#11360)

--- a/mypy.ini
+++ b/mypy.ini
@@ -143,6 +143,9 @@ disallow_untyped_defs = True
 [mypy-synapse.app.*]
 disallow_untyped_defs = True
 
+[mypy-synapse.appservice.*]
+disallow_untyped_defs = True
+
 [mypy-synapse.config._base]
 disallow_untyped_defs = True
 
