--- a/mypy.ini
+++ b/mypy.ini
@@ -167,6 +167,9 @@ disallow_untyped_defs = True
 [mypy-synapse.http.server]
 disallow_untyped_defs = True
 
+[mypy-synapse.logging.context]
+disallow_untyped_defs = True
+
 [mypy-synapse.metrics.*]
 disallow_untyped_defs = True
 
