Add type hints to `synapse/tests/rest/admin`

--- a/mypy.ini
+++ b/mypy.ini
@@ -240,6 +240,9 @@ disallow_untyped_defs = True
 [mypy-tests.storage.test_user_directory]
 disallow_untyped_defs = True
 
+[mypy-tests.rest.admin.*]
+disallow_untyped_defs = True
+
 [mypy-tests.rest.client.test_directory]
 disallow_untyped_defs = True
 
