--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -72,4 +72,4 @@ jobs:
           labels: "gitsha1=${{ github.sha }}"
           tags: "matrixdotorg/synapse:${{ steps.set-tag.outputs.tag }}"
           file: "docker/Dockerfile"
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
