Add type hints to `synapse/storage/databases/main/stats.py`

--- a/mypy.ini
+++ b/mypy.ini
@@ -39,7 +39,6 @@ exclude = (?x)
    |synapse/storage/databases/main/roommember.py
    |synapse/storage/databases/main/search.py
    |synapse/storage/databases/main/state.py
-   |synapse/storage/databases/main/stats.py
    |synapse/storage/databases/main/user_directory.py
    |synapse/storage/schema/
 
@@ -212,6 +211,9 @@ disallow_untyped_defs = True
 disallow_untyped_defs = True
 
 [mypy-synapse.storage.databases.main.profile]
+disallow_untyped_defs = True
+
+[mypy-synapse.storage.databases.main.stats]
 disallow_untyped_defs = True
 
 [mypy-synapse.storage.databases.main.state_deltas]
