Use `track_puppeted_user_ips` instead
Also move it from server to api config, which seems more relevant, given the code it is used is in api auth.

Signed-off-by: Jason Robinson <jasonr@matrix.org>

--- a/docs/sample_config.yaml
+++ b/docs/sample_config.yaml
@@ -439,11 +439,6 @@ manhole_settings:
 #  - medium: 'email'
 #    address: 'reserved_user@example.com'
 
-# If enabled, puppeted users will be counted in monthly active users.
-# By default, when puppeting another user, only the puppeteer is counted.
-# If this is enabled, both users are counted.
-#mau_track_puppeted_users: false
-
 # Used by phonehome stats to group together related servers.
 #server_context: context
 
@@ -1506,6 +1501,11 @@ room_prejoin_state:
    #
    #additional_event_types:
    #  - org.example.custom.event.type
+
+# If enabled, puppeted user IP's can also be tracked. By default when
+# puppeting another user, the user who has created the access token
+# for puppeting is tracked. If this is enabled, both requests are tracked.
+#track_puppeted_user_ips: false
 
 
 # A list of application service config files to use
