--- a/docs/sample_config.yaml
+++ b/docs/sample_config.yaml
@@ -1505,6 +1505,7 @@ room_prejoin_state:
 # If enabled, puppeted user IP's can also be tracked. By default when
 # puppeting another user, the user who has created the access token
 # for puppeting is tracked. If this is enabled, both requests are tracked.
+# Implicitly enables MAU tracking for puppeted users.
 #track_puppeted_user_ips: false
 
 
