Allow installing VizTracer with SYNAPSE_VIZTRACER=1 env var

--- a/mypy.ini
+++ b/mypy.ini
@@ -349,5 +349,8 @@ ignore_missing_imports = True
 [mypy-twisted.*]
 ignore_missing_imports = True
 
+[mypy-viztracer]
+ignore_missing_imports = True
+
 [mypy-zope]
 ignore_missing_imports = True
