--- a/docs/sample_config.yaml
+++ b/docs/sample_config.yaml
@@ -1436,12 +1436,15 @@ account_threepid_delegates:
 #
 #auto_join_rooms_for_guests: false
 
-# Whether to ignore the username supplied by the client in the registration
-# request and instead automatically generate one.
+# Whether to inhibit errors raised when registering a new account if the user ID
+# already exists. If turned on, that requests to /register/available will always
+# show a user ID as available, and Synapse won't raise an error when starting
+# a registration with a user ID that already exists. However, Synapse will still
+# raise an error if the registration completes and the username conflicts.
 #
 # Defaults to false.
 #
-#ignore_client_username: true
+#inhibit_user_in_use_error: true
 
 
 ## Metrics ###
