newsfragment and update sample config

--- a/docs/sample_config.yaml
+++ b/docs/sample_config.yaml
@@ -738,10 +738,10 @@ caches:
     #get_users_who_share_room_with_user: 2.0
 
   # Controls how long an entry can be in a cache without having been
-  # accessed before being evicted. Defaults to None, which means
-  # entries are never evicted based on time.
+  # accessed before being evicted. Defaults to 30m. Comment out this
+  # option if you don't want entries to be evicted based on time.
   #
-  #expiry_time: 30m
+  expiry_time: 30m
 
   # Controls how long the results of a /sync request are cached for after
   # a successful response is returned. A higher duration can help clients with
