Add missing type hints to synapser.notifier.

--- a/mypy.ini
+++ b/mypy.ini
@@ -166,6 +166,9 @@ disallow_untyped_defs = True
 [mypy-synapse.module_api.*]
 disallow_untyped_defs = True
 
+[mypy-synapse.notifier]
+disallow_untyped_defs = True
+
 [mypy-synapse.push.*]
 disallow_untyped_defs = True
 
