--- a/tox.ini
+++ b/tox.ini
@@ -124,6 +124,8 @@ usedevelop = false
 deps =
     Automat == 0.8.0
     lxml
+    # markupsafe 2.1 introduced a change that breaks Jinja 2.x. Since we depend on
+    # Jinja >= 2.9, it means this test suite will fail if markupsafe >= 2.1 is installed.
     markupsafe < 2.1
     {[base]deps}
 
