--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -123,10 +123,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Test with old deps
         uses: docker://ubuntu:focal # For old python and sqlite
+        # Note: focal seems to be using 3.8, but the oldest is 3.7?
         with:
           workdir: /github/workspace
           entrypoint: .ci/scripts/test_old_deps.sh
-      - run: trial --jobs=2 tests
       - name: Dump logs
         # Logs are most useful when the command fails, always include them.
         if: ${{ always() }}
@@ -149,7 +149,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["pypy-3.7"]
-        extras: [""]
+        extras: ["all"]
 
     steps:
       - uses: actions/checkout@v2
