Make poetry available in sytest twisted trunk test
We may have to use OFFLINE=1 mode to stop sytest from reinstalling a
non-trunk version of twisted. Let's find out.

--- a/.github/workflows/twisted_trunk.yml
+++ b/.github/workflows/twisted_trunk.yml
@@ -59,6 +59,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: matrix-org/setup-python-poetry@dmr/try-extras
+        with:
+          python-version: "3.x"
+          extras: "all"
       - name: Patch dependencies
         run: .ci/patch_for_twisted_trunk.sh
         working-directory: /src
